--- a/src/template/includes/_scripts.html
+++ b/src/template/includes/_scripts.html
@@ -1,7 +1,7 @@
 <!--Scripts-->
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/mixitup.min.js"></script>
-<script src="js/jquery.nicescroll.min.js"></script>
+<!--<script src="js/jquery.nicescroll.min.js"></script>-->
 <script src="js/smooth-scroll.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/main.js"></script>
